* Default to "UTF-8" per section 2 of the draft W3C "The XMLHttpRequest Object" specification. Fixes BR# 130234

BUG:130234

svn path=/branches/KDE/3.5/kdelibs/; revision=718830